# cfbd-python

./: .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
.claude/: settings.local.json
.github/: FUNDING.md
.openapi-generator/: FILES
cfbd/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
docs/: AdjustedMetrics.md  AdjustedMetricsApi.md  AdjustedMetricsEpa.md  AdjustedMetricsRushing.md  AdjustedMetricsSuccessRate.md  AdjustedTeamMetrics.md  AdjustedTeamMetricsEpa.md  AdjustedTeamMetricsRushing.md  AdjustedTeamMetricsSuccessRate.md  AdvancedBoxScore.md  AdvancedBoxScoreGameInfo.md  AdvancedBoxScorePlayers.md  AdvancedBoxScoreTeams.md  AdvancedGameStat.md  AdvancedGameStatDefense.md  AdvancedGameStatOffense.md  AdvancedGameStatOffensePassingDowns.md  AdvancedGameStatOffensePassingPlays.md  AdvancedGameStatOffenseRushingPlays.md  AdvancedGameStatOffenseStandardDowns.md  AdvancedSeasonStat.md  AdvancedSeasonStatDefense.md  AdvancedSeasonStatOffense.md  AdvancedSeasonStatOffenseFieldPosition.md  AdvancedSeasonStatOffenseHavoc.md  AdvancedSeasonStatOffensePassingDowns.md  AdvancedSeasonStatOffensePassingPlays.md  AdvancedSeasonStatOffenseRushingPlays.md  AdvancedSeasonStatOffenseStandardDowns.md  AggregatedTeamRecruiting.md  BettingApi.md  BettingGame.md  BoxScore.md  BoxScorePlayers.md  BoxScorePlayersAverage.md  BoxScorePlayersPpa.md  BoxScorePlayersUsage.md  BoxScoreTeams.md  BoxScoreTeamsExplosiveness.md  BoxScoreTeamsFieldPosition.md  (+226 more)
test/: test_adjusted_metrics.py  test_adjusted_metrics_api.py  test_adjusted_metrics_epa.py  (+263 more)
(+270 files in other folders)
